tests/compile_fail/invalid_resolved_with_diagnostics_literal.rs
use surgeist_style::{Resolved, ResolvedWithDiagnostics};

fn main() {
    let _resolved = ResolvedWithDiagnostics {
        resolved: Resolved::new(),
        diagnostics: Vec::new(),
    };
}
